[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>", "Sebastian Maldonado <sebasma411@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
chrono = "0.4.42"
rand = "0.9.2"
regex = "1.12.2"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
